<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.udea.compumovil.gr5.lab1ui.MainActivity">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/primary"
        android:titleTextAppearance="@style/ToolbarTitle"
        android:elevation="@dimen/elevation_toolbar">
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/none"
            android:layout_weight="3"
            android:padding="@dimen/margin"
            android:layout_gravity="end">

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <EditText
                    android:id="@+id/txt_nombres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:gravity="center"
                    android:inputType="textCapWords|textNoSuggestions"
                    android:hint="@string/nombres"
                    android:singleLine="true"
                    android:imeOptions="actionNext"/>

                <EditText
                    android:id="@+id/txt_apellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:gravity="center"
                    android:inputType="textCapWords|textNoSuggestions"
                    android:hint="@string/apellidos"
                    android:layout_below="@id/txt_nombres"
                    android:singleLine="true"
                    android:imeOptions="actionNext"/>

                <AutoCompleteTextView
                    android:id="@+id/txt_pais"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:gravity="center"
                    android:inputType="textAutoComplete|textCapWords"
                    android:hint="@string/pais"
                    android:layout_below="@id/txt_apellidos"
                    android:singleLine="true"
                    android:imeOptions="actionNext"/>

                <EditText
                    android:id="@+id/txt_telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:gravity="center"
                    android:inputType="phone"
                    android:hint="@string/telefono"
                    android:layout_below="@id/txt_pais"
                    android:singleLine="true"
                    android:imeOptions="actionNext"/>

                <EditText
                    android:id="@+id/txt_direccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:gravity="center"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/direccion"
                    android:layout_below="@id/txt_telefono"
                    android:singleLine="true"
                    android:imeOptions="actionNext"/>

                <EditText
                    android:id="@+id/txt_correo_electronico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:gravity="center"
                    android:inputType="textEmailAddress"
                    android:hint="@string/correo_electronico"
                    android:layout_below="@id/txt_direccion"
                    android:singleLine="true"
                    android:imeOptions="actionNext"/>

                <EditText
                    android:id="@+id/txt_nacimiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:gravity="center"
                    android:hint="@string/formato_fecha"
                    android:layout_below="@+id/txt_correo_electronico"
                    android:textColor="@color/primary_text"
                    android:editable="false"/>

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/rg_sexo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:layout_below="@id/txt_nacimiento"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/masculino"
                        android:textSize="@dimen/text_size"
                        android:id="@+id/rb_masculino"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/femenino"
                        android:textSize="@dimen/text_size"
                        android:id="@+id/rb_femenino"/>
                </RadioGroup>

                <TextView
                    android:id="@+id/lbl_pasatiempo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pasatiempo"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/primary_text"
                    android:layout_marginTop="@dimen/margin"
                    android:layout_below="@+id/rg_sexo"/>

                <Spinner
                    android:id="@+id/spin_pasatiempos"
                    android:layout_width="@dimen/width_spinner"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lbl_pasatiempo"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:backgroundTint="@color/accent"/>

                <CheckBox
                    android:id="@+id/cb_favorito"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorito"
                    android:textSize="@dimen/text_size"
                    android:layout_marginTop="@dimen/margin"
                    android:layout_centerInParent="true"
                    android:layout_below="@id/spin_pasatiempos"
                    android:checked="false" />

            </RelativeLayout>
    </ScrollView>


    <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="@dimen/none"
            android:layout_weight="1"
            android:padding="@dimen/margin"
            android:elevation="@dimen/elevation_second_layout"
            android:layout_gravity="center_horizontal"
            android:background="@color/primary_light">

        <ScrollView
            android:id="@+id/sv_down"
            android:layout_marginRight="@dimen/width_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true">

            <TextView
                android:id="@+id/lbl_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </ScrollView>

        <Button
            android:id="@+id/btn_mostrar"
            android:layout_width="@dimen/width_button"
            android:layout_height="@dimen/height_button"
            android:paddingRight="@dimen/margin"
            android:paddingLeft="@dimen/margin"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/abc_ic_search_api_mtrl_alpha"
            android:text="@string/mostrar"
            android:background="@color/accent"
            android:textSize="@dimen/text_size_button"
            android:layout_alignParentRight="true"
            android:elevation="@dimen/elevation_button"/>

        </RelativeLayout>

</LinearLayout>
